Apparently fixed results.html on firefox

--- a/public/sources/layout/_client.scss
+++ b/public/sources/layout/_client.scss
@@ -555,3 +555,6 @@ p.note{
 	border-radius: 0 0 3px 3px;
 	margin-bottom: 1em;
 }
+.block{
+  display: block;
+}
